# echotype

./: .gitignore  AUTO_START_SERVER.md  CapsWriterServer.spec  PACKAGING_GUIDE.md  README.md  README_ZH.md  __init__.py  autostart.py  build_all.bat  build_package.py  build_package_en.py  client_config.py  config_manager.py  hotkey_dialog.py  language.py  logger.py  mic_session.py  model_checker.py  pyproject.toml  requirements-simple.txt  requirements.txt  run_tray.py  settings_dialog.py  test_imports.py  test_package.py  tray_app.py  tray_backend.py  tray_icons.py  tray_state.py  windows-tray-client-requirements.md
hotwords/: hot-en.txt
locales/zh/LC_MESSAGES/: messages.po
server/: CapsWriterServer.spec  README_SERVER_MANAGER.md  config.py  core_server.py  progress.json  run_server_manager.py  server_manager_ui.py
server/util/: server_check_model.py  server_init_recognizer.py  server_ws_recv.py  server_ws_send.py
util/: __init__.py  client_check_websocket.py  client_cosmic.py  client_create_file.py  client_finish_file.py  client_hot_sub.py  client_hot_update.py  client_recv_result.py  client_rename_audio.py  client_send_audio.py  client_shortcut_handler.py  client_stream.py  client_strip_punc.py  client_type_result.py  client_write_md.py  hot_kwds.py  hot_sub_en.py
